--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,17 +5,37 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3
 
     - name: Set up PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.1' 
+        php-version: '8.1' # Adjust PHP version if needed
 
-    - name: Install Dependencies
-      run: composer install
+    - name: Install dependencies
+      run: composer install --prefer-dist --no-progress --no-suggest
 
-    - name: Run Tests
+    - name: Set up database
+      run: |
+       sudo apt-get update
+        sudo apt-get install -y mysql-server
+        sudo service mysql start
+        mysql -e "CREATE DATABASE IF NOT EXISTS ${DB_DATABASE};"
+        mysql -e "CREATE USER IF NOT EXISTS '${DB_USERNAME}'@'localhost' IDENTIFIED BY '';"
+        mysql -e "GRANT ALL PRIVILEGES ON ${DB_DATABASE}.* TO '${DB_USERNAME}'@'localhost';"
+        mysql -e "FLUSH PRIVILEGES;"
+
+    - name: Run migrations
+      run: php artisan migrate --force
+
+    - name: Run tests
+      env:
+        DB_CONNECTION: ${{ secrets.DB_CONNECTION }}
+        DB_HOST: ${{ secrets.DB_HOST }}
+        DB_PORT: ${{ secrets.DB_PORT }}
+        DB_DATABASE: ${{ secrets.DB_DATABASE }}
+        DB_USERNAME: ${{ secrets.DB_USERNAME }}
+        DB_PASSWORD: ''
       run: php artisan test
