--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,16 @@ jobs:
        sudo apt-get update
         sudo apt-get install -y mysql-server
         sudo service mysql start
-        mysql -e "CREATE DATABASE IF NOT EXISTS ${DB_DATABASE};"
-        mysql -e "CREATE USER IF NOT EXISTS '${DB_USERNAME}'@'localhost' IDENTIFIED BY '';"
-        mysql -e "GRANT ALL PRIVILEGES ON ${DB_DATABASE}.* TO '${DB_USERNAME}'@'localhost';"
-        mysql -e "FLUSH PRIVILEGES;"
+
+        # Secure MySQL installation
+        sudo mysql -e "UPDATE mysql.user SET authentication_string=PASSWORD('') WHERE User='root';"
+        sudo mysql -e "FLUSH PRIVILEGES;"
+
+        # Create database and user
+        mysql -u root -p -e "CREATE DATABASE IF NOT EXISTS ${DB_DATABASE};"
+        mysql -u root -p -e "CREATE USER IF NOT EXISTS '${DB_USERNAME}'@'localhost' IDENTIFIED BY '${DB_PASSWORD}';"
+        mysql -u root -p -e "GRANT ALL PRIVILEGES ON ${DB_DATABASE}.* TO '${DB_USERNAME}'@'localhost';"
+        mysql -u root -p -e "FLUSH PRIVILEGES;"
 
     - name: Run migrations
       run: php artisan migrate --force
