--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Set up PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.1' # Adjust PHP version if needed
+        php-version: '8.1' 
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
@@ -23,10 +23,10 @@ jobs:
         sudo apt-get install -y mysql-server
         sudo service mysql start
 
-        # Create database and user with no password
-        mysql -e "CREATE DATABASE IF NOT EXISTS ${DB_DATABASE};"
-        mysql -e "CREATE USER IF NOT EXISTS '${DB_USERNAME}'@'localhost';"
-        mysql -e "GRANT ALL PRIVILEGES ON ${DB_DATABASE}.* TO '${DB_USERNAME}'@'localhost';"
+        # Create database and user without password
+        mysql -e "CREATE DATABASE IF NOT EXISTS task_manager;"
+        mysql -e "CREATE USER IF NOT EXISTS 'root'@'localhost';"
+        mysql -e "GRANT ALL PRIVILEGES ON task_manager.* TO 'root'@'localhost';"
         mysql -e "FLUSH PRIVILEGES;"
 
     - name: Run migrations
@@ -34,8 +34,8 @@ jobs:
         DB_CONNECTION: mysql
         DB_HOST: 127.0.0.1
         DB_PORT: 3306
-        DB_DATABASE: ${{ secrets.DB_DATABASE }}
-        DB_USERNAME: ${{ secrets.DB_USERNAME }}
+        DB_DATABASE: task_manager
+        DB_USERNAME: root
         DB_PASSWORD: ''
       run: php artisan migrate --force
 
@@ -44,7 +44,7 @@ jobs:
         DB_CONNECTION: mysql
         DB_HOST: 127.0.0.1
         DB_PORT: 3306
-        DB_DATABASE: ${{ secrets.DB_DATABASE }}
-        DB_USERNAME: ${{ secrets.DB_USERNAME }}
+        DB_DATABASE: task_manager
+        DB_USERNAME: root
         DB_PASSWORD: ''
       run: php artisan test
