--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -17,12 +18,16 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
 
-    - name: Set up database
+    - name: Set up MySQL
       run: |
         sudo apt-get update
         sudo apt-get install -y mysql-server
         sudo service mysql start
 
+        # Allow root to log in without a password temporarily
+        sudo mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '';"
+
+        # Create the database and user
         mysql -e "CREATE DATABASE IF NOT EXISTS task_manager;"
         mysql -e "CREATE USER 'forge'@'localhost' IDENTIFIED BY 'password';"
         mysql -e "GRANT ALL PRIVILEGES ON task_manager.* TO 'forge'@'localhost';"
@@ -37,12 +42,6 @@ jobs:
         echo "DB_DATABASE=task_manager" >> .env
         echo "DB_USERNAME=forge" >> .env
         echo "DB_PASSWORD=password" >> .env
-
-    - name: Check MySQL Status
-      run: sudo service mysql status
-
-    - name: Check MySQL Users
-      run: mysql -e "SELECT user, host FROM mysql.user;"
 
     - name: Run migrations
       env:
