--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,62 +3,32 @@ name: Run Tests
 on: [push, pull_request]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+    run-tests:
+        runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
 
-    - name: Set up PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.1' # Adjust PHP version if needed
+            - name: Install PHP latest
+              run: |
+                  sudo apt remove php -y
+                  sudo apt update
+                  sudo add-apt-repository ppa:ondrej/php
+                  sudo apt update
+                  sudo apt -y install php
+                  sudo apt update
+                  sudo apt install php-curl php-xml php-mbstring php-mysql -y
 
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
+            - name: Start Mariadb
+              run: |
+                  sudo systemctl start mysql.service
+                  mysql -uroot -p -e 'CREATE DATABASE IF NOT EXISTS task-manager;'
 
-    - name: Set up MySQL
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y mysql-server
-        sudo service mysql start
+            - name: Install Composer dependencies
+              run: composer update
 
-        # Allow root to log in without a password temporarily
-        sudo mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '';"
-
-        # Create the database and user
-        mysql -e "CREATE DATABASE IF NOT EXISTS task_manager;"
-        mysql -e "CREATE USER 'forge'@'localhost' IDENTIFIED BY 'password';"
-        mysql -e "GRANT ALL PRIVILEGES ON task_manager.* TO 'forge'@'localhost';"
-        mysql -e "FLUSH PRIVILEGES;"
-
-    - name: Configure .env
-      run: |
-        cp .env.example .env
-        echo "DB_CONNECTION=mysql" >> .env
-        echo "DB_HOST=127.0.0.1" >> .env
-        echo "DB_PORT=3306" >> .env
-        echo "DB_DATABASE=task_manager" >> .env
-        echo "DB_USERNAME=forge" >> .env
-        echo "DB_PASSWORD=password" >> .env
-
-    - name: Run migrations
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_PORT: 3306
-        DB_DATABASE: task_manager
-        DB_USERNAME: forge
-        DB_PASSWORD: password
-      run: php artisan migrate --force
-
-    - name: Run tests
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_PORT: 3306
-        DB_DATABASE: task_manager
-        DB_USERNAME: forge
-        DB_PASSWORD: password
-      run: php artisan test
+            - name: Run unit tests
+              run: |
+                  php artisan migrate
+                  php artisan test
